# claude-agent-sdk-playground

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP-v0.10.x.md  TODO.md  audit.md  double-check.md  pyproject.toml
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml
agent_builder/: __init__.py  _version.py  builder.py  cleanup.py  doctor.py  manifest.py  paths.py  render.py  utils.py
agent_builder/identity/: AGENT.md  MEMORY.md  SOUL.md
agent_builder/recipes/: __init__.py  loader.py  schema.py
agent_builder/registry/: agents.json
agent_builder/templates/: agent_main.py.tmpl  agent_md.tmpl  agent_poll.py.tmpl  env_example.tmpl
agent_builder/tools/: __init__.py  attach_recipe.py  edit_agent.py  list_recipes.py  registry.py  remove_agent.py  rollback.py  scaffold.py  self_heal.py  test_agent.py  write_identity.py  write_tools.py
agents/: test_bot.py
docs/: next-release-plan.md  oauth-setup.md
docs/superpowers/plans/: 2026-04-13-agent-builder.md  2026-04-20-agent-builder-v0.10-authoring-and-components.md  2026-04-20-agent-builder-v0.9-composition-retrofit.md  2026-04-20-agent-builder-v0.9-recipes-and-server-mode.md  2026-04-20-agent-builder-v0.9-rollups-from-v0.8.md
docs/superpowers/specs/: 2026-04-13-agent-builder-design.md  (+2 more)
examples/: 00_preflight_check.py  01_basic_query.py  02_custom_tools.py  03_hooks.py  04_subagents.py  05_session_resume.py
tests/: conftest.py  test_agent_poll_template.py  test_attach_recipe.py  test_builder_cli.py  test_builder_version.py  test_cleanup.py  test_cli_dispatch_wiring.py  test_count_custom_tools.py  test_doctor.py  test_e2e_recipe_attach.py  test_edit_agent.py  test_env_merge.py  test_format_tool_call.py  test_list_recipes.py  test_manifest.py  test_paths.py  test_recipes_loader.py  test_recipes_schema.py  test_registry.py  test_remove_agent.py  test_render.py  test_rollback.py  test_scaffold.py  test_self_heal.py  test_spinner_cost.py  test_template_build_claude_md.py  test_template_dotenv.py  test_template_imports.py  test_template_log_rotation.py  test_test_agent_poll.py  test_test_agent_test_mode.py  test_utils.py  test_write_identity.py  test_write_tools.py
(+10 files in other folders)
