[project]
name = "claude-agent-sdk-playground"
version = "0.2.0"
description = "Agent Builder — create, test, and manage purpose-built Claude Agent SDK agents through conversation"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "anyio",
]

[project.optional-dependencies]
dev = [
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["agent_builder*"]
exclude = ["output*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
