[project]
name = "claude-agent-sdk-playground"
version = "0.9.0"
description = "Agent Builder — create, test, and manage purpose-built Claude Agent SDK agents through conversation"
requires-python = ">=3.10"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "William Clelland" }]
readme = "README.md"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
telegram = [
    "python-telegram-bot>=21.0",
]
google = [
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.0",
]

[tool.setuptools.packages.find]
include = ["agent_builder*"]
exclude = ["output*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
